docs(known-issues): HIB-CV-26 Class.forName clinit-abort bug FIXED (43e130fa)